--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>command - The place where your code is beginning</title>
+  <title>brio. - The place where your code is beginning</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     }
 
     body {
-      background-color: black;
+      background-color: #111;
       text-align: center;
       margin: 0;
       font-family: "Manrope", sans-serif;
@@ -255,24 +255,27 @@
 }
 
 
+ 
+#refresh #image{
+  visibility: visible;
+ }
 
+ #refresh{
+  visibility: hidden;
+ }
   
-
+  
 
 
 
   </style>
 </head>
 <body>
-  <!-- Profile Icon -->
-  <div class="account-icon" id="profileIcon">
-    <span class="material-symbols-outlined">account_circle</span>
-    <div id="usernameDisplay"></div>
+
   </div>
 
-  <img src="Untitled design.png" id = "image">
 
-  <h1 class="SFmaintext">command</h1>
+  <h1 class="SFmaintext">brio.</h1>
 
   <div class="video-container">
     
@@ -297,7 +300,7 @@
 
   <div class="blocks">
   <div class="know">
-    <h1>command knows how it is to code</h1>
+    <h1>brio knows how it is to code</h1>
     <p>We understand the struggles, the breakthroughs, and the creativity of programming.</p>
    
       <video autoplay muted loop playsinline class="block-video">
@@ -330,6 +333,7 @@
 </body>
 
 <script>
+  
 
 </script>
 </html>
