--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="Untitled design.png">
   <style>
     /* 🔹 Fade-in animation */
@@ -25,7 +27,7 @@
     }
 
     .SFmaintext {
-          font-weight: 700;
+          font-weight: 500;
     color: white;
     text-align: center;
     position: fixed;
@@ -35,6 +37,10 @@
     z-index: 10;
     margin: 0;
     padding: 20px 0; /* 👈 used to calculate space */
+      font-family: "Atkinson Hyperlegible Next", sans-serif;
+  font-optical-sizing: auto;
+  
+ 
     
     width: 100%;
     box-sizing: border-box
