--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
   <h1 class="SFmaintext">brio.</h1>
   <nav class="nav-links">
     <a href="index.html">Home</a>
-    <a href="#">Download</a>
+    <a href="download.html">Download</a>
     <a href="#">Pricing</a>
     <a href="#">Contact</a>
   </nav>
