--- a/index.html
+++ b/index.html
@@ -347,7 +347,57 @@
 
   
 
+.hamburger {
+  display: none; /* only show on mobile */
+  flex-direction: column;
+  cursor: pointer;
+  gap: 6px;
+  z-index: 1001; /* make sure it stays above nav */
+}
 
+.hamburger span {
+  width: 28px;
+  height: 3px;
+  background: white;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+/* Animation states when open */
+.hamburger.open span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.open span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* Mobile nav still works the same */
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background: #111;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    padding: 20px;
+    border-radius: 12px;
+    z-index: 1000;
+  }
+
+  .nav-links.active {
+    display: flex;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
 
   </style>
 </head>
@@ -355,18 +405,26 @@
 
   </div>
 
-   
-<div class="top-bar">
-  <h1 class="SFmaintext">brio.</h1>
-  <nav class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="download.html">Download</a>
-    <a href="#">Pricing</a>
-    <a href="#">Contact</a>
-  </nav>
-  <div class="hamburger">☰</div>
-</div>
 
+<header>
+  <nav class="navbar">
+    <div class="SFmaintext">brio.</div>
+
+    <!-- nav links -->
+    <ul class="nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#features">Features</a></li>
+      <li><a href="#download-boxes">Download</a></li>
+    </ul>
+
+    <!-- hamburger button -->
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </nav>
+</header>
   
 
   <div class="video-container">
@@ -428,9 +486,9 @@
 
   hamburger.addEventListener("click", () => {
     navLinks.classList.toggle("active");
+    hamburger.classList.toggle("open");
   });
 
-  const bg = document.getElementById("bgvideo"); bg.muted = true; 
-
+  
 </script>
 </html>
