--- a/index.html
+++ b/index.html
@@ -263,14 +263,7 @@
 
 
  
-#refresh #image{
-  visibility: visible;
- }
 
- #refresh{
-  visibility: hidden;
- }
-  
 
 .top-bar {
   position: fixed;
@@ -341,64 +334,7 @@
     display: flex;
   }
 
-  .hamburger {
-    display: block;
-  }
-}
-
   
-
-.hamburger {
-  display: none; /* only show on mobile */
-  flex-direction: column;
-  cursor: pointer;
-  gap: 6px;
-  z-index: 1001; /* make sure it stays above nav */
-}
-
-.hamburger span {
-  width: 28px;
-  height: 3px;
-  background: white;
-  border-radius: 3px;
-  transition: all 0.3s ease;
-}
-
-/* Animation states when open */
-.hamburger.open span:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-
-.hamburger.open span:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger.open span:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -5px);
-}
-
-/* Mobile nav still works the same */
-@media (max-width: 768px) {
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    background: #111;
-    position: absolute;
-    top: 60px;
-    right: 20px;
-    padding: 20px;
-    border-radius: 12px;
-    z-index: 1000;
-  }
-
-  .nav-links.active {
-    display: flex;
-  }
-
-  .hamburger {
-    display: flex;
-  }
-}
 
   </style>
 </head>
@@ -408,7 +344,7 @@
 
 
 <div class="top-bar">
-  <h1>brio.</h1>
+  <h1 class="SFmaintext">brio.</h1>
   <nav class="nav-links">
     <a href="#index.html">Home</a>
     <a href="#features">Features</a>
