--- a/index.html
+++ b/index.html
@@ -438,39 +438,27 @@
     </div>
   </div>
 
-  <div class="blocks">
+  
+
+<div class="blocks">
   <div class="know">
     <h1>brio knows how it is to code</h1>
     <p>We understand the struggles, the breakthroughs, and the creativity of programming.</p>
-   
-      <video autoplay muted loop playsinline class="block-video">
-  <source src="howtocode.mp4" type="video/mp4">
-  Your browser does not support video playback.
-</video>
-
-  
+    <img src="howtocode.png" alt="How to code" class="block-image">
   </div>
+
   <div class="friendly">
     <h1>code-friendly</h1>
     <p>A smooth and clean environment designed for you to write better code.</p>
-   <video autoplay muted loop playsinline class="block-video">
-  <source src="code-friendly.MP4" type="video/mp4">
-  Your browser does not support video playback.
-</video>
-
-    
+    <img src="code-friendly.png" alt="Code-friendly" class="block-image">
   </div>
+
   <div class="minimalistic">
     <h1>minimalistic</h1>
     <p>Everything you need, nothing you don’t. Focus on what matters most: your ideas.</p>
-    <video autoplay muted loop playsinline class="block-video">
-  <source src="minimalistic.mp4" type="video/mp4">
-  Your browser does not support video playback.
-</video>
-
+    <img src="minimalistic.png" alt="Minimalistic" class="block-image">
   </div>
 </div>
-
 </body>
 
 <script>
