--- a/index.html
+++ b/index.html
@@ -444,19 +444,19 @@
   <div class="know">
     <h1>brio knows how it is to code</h1>
     <p>We understand the struggles, the breakthroughs, and the creativity of programming.</p>
-    <img src="howtocode.png" alt="How to code" class="block-image">
+    <img src="howtocode.jpg" alt="How to code" class="block-image">
   </div>
 
   <div class="friendly">
     <h1>code-friendly</h1>
     <p>A smooth and clean environment designed for you to write better code.</p>
-    <img src="code-friendly.png" alt="Code-friendly" class="block-image">
+    <img src="code-friendly.jpg" alt="Code-friendly" class="block-image">
   </div>
 
   <div class="minimalistic">
     <h1>minimalistic</h1>
     <p>Everything you need, nothing you don’t. Focus on what matters most: your ideas.</p>
-    <img src="minimalistic.png" alt="Minimalistic" class="block-image">
+    <img src="minimalistic.jpg" alt="Minimalistic" class="block-image">
   </div>
 </div>
 </body>
