--- a/index.html
+++ b/index.html
@@ -420,19 +420,17 @@
   
   
 
-  <div class="video-container">
-    <video autoplay muted loop playsinline id="bgvideo">
-  <source src="video-safe.mp4" type="video/mp4">
-</video>
-
-
-    <div class="overlay">
-      <div class="inside-text">The place to code.</div>
-      <div class="descripition">Let the imagination flow.</div>
-      <button class="buttone" id="getStartedBtn">
-        <span class="desktop">Get started ↗</span>
-        <span class="mobile">Test Command Web ↗</span>
-        
+<div class="video-container">
+  <img src="background.jpg" alt="Background" id="bgimage">
+  <div class="overlay">
+    <div class="inside-text">The place to code.</div>
+    <div class="descripition">Let the imagination flow.</div>
+    <button class="buttone" id="getStartedBtn">
+      <span class="desktop">Get started ↗</span>
+      <span class="mobile">Test Command Web ↗</span>
+    </button>
+  </div>
+</div>
         
       </button>
     </div>
