--- a/index.html
+++ b/index.html
@@ -59,16 +59,15 @@
     border-bottom: 1px solid white;
     }
 
-    #bgvideo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: 0;
-    }
-
+   #bgimage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
     .overlay {
       position: absolute;
       top: 50%;
