--- a/index.html
+++ b/index.html
@@ -262,15 +262,6 @@
 
 
  
-#refresh #image{
-  visibility: visible;
- }
-
- #refresh{
-  visibility: hidden;
- }
-  
-
 .top-bar {
   position: fixed;
   top: 0;
@@ -282,8 +273,6 @@
   justify-content: space-between;
   padding: 0 20px;
   z-index: 100;
-  
-  
   background: rgba(20, 20, 20, 0.4);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
@@ -313,12 +302,15 @@
   color: #00f7ff;
 }
 
-.hamburger {
-  display: none;
-  font-size: 1.8rem;
-  cursor: pointer;
-  color: white;
+/* Hide nav links on mobile */
+@media (max-width: 768px) {
+  .top-bar .nav-links {
+    display: none;
+  }
 }
+  
+
+
 
 
 @media (max-width: 768px) {
@@ -339,43 +331,6 @@
     display: flex;
   }
 
-  .hamburger {
-    display: block;
-  }
-}
-
-  
-
-.hamburger {
-  display: none; /* only show on mobile */
-  flex-direction: column;
-  cursor: pointer;
-  gap: 6px;
-  z-index: 1001; /* make sure it stays above nav */
-}
-
-.hamburger span {
-  width: 28px;
-  height: 3px;
-  background: white;
-  border-radius: 3px;
-  transition: all 0.3s ease;
-}
-
-/* Animation states when open */
-.hamburger.open span:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 5px);
-}
-
-.hamburger.open span:nth-child(2) {
-  opacity: 0;
-}
-
-.hamburger.open span:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -5px);
-}
-
-/* Mobile nav still works the same */
 @media (max-width: 768px) {
   .nav-links {
     display: none;
@@ -401,21 +356,22 @@
   </style>
 </head>
 <body>
+  <nav class="top-bar">
+  <div class="SFmaintext">brio.</div>
 
-  </div>
-
-
-
-  <nav class="navbar">
-    <div class="SFmaintext">brio.</div>
-
-    <!-- nav links -->
-    <ul class="nav-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#features">Features</a></li>
-      <li><a href="#download-boxes">Download</a></li>
-    </ul>
+  <!-- nav links only visible on desktop -->
+  <ul class="nav-links desktop">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#features">Features</a></li>
+    <li><a href="#download-boxes">Download</a></li>
+  </ul>
 </nav>
+
+ 
+
+
+
+  
   
   
 
