--- a/index.html
+++ b/index.html
@@ -261,22 +261,31 @@
 }
 
 
- 
-.top-bar {
+ .top-bar {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 60px;
+
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center; /* center everything horizontally */
   padding: 0 20px;
   z-index: 100;
+
   background: rgba(20, 20, 20, 0.4);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+
+.top-bar .nav-links.desktop {
+  position: absolute;
+  right: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .top-bar .SFmaintext {
