--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
     box-sizing: border-box
     }
 
+    #bgimage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+}
+
+
    
     .video-container {
        position: relative;
@@ -59,15 +70,7 @@
     border-bottom: 1px solid white;
     }
 
-    #bgvideo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: 0;
-    }
+    
 
     .overlay {
       position: absolute;
