--- a/index.html
+++ b/index.html
@@ -276,29 +276,31 @@
   
 
 .top-bar {
-  position: fixed;
+   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 60px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
+  justify-content: center; /* centers the title */
   z-index: 100;
-  
-  
   background: rgba(20, 20, 20, 0.4);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 0 20px;
 }
 
 .top-bar .SFmaintext {
-  font-size: 1.4rem;
+ font-size: 1.4rem;
   font-weight: 700;
   color: white;
   font-family: "Atkinson Hyperlegible Next", sans-serif;
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .top-bar .nav-links {
