--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
 <div class="top-bar">
   <h1 class="SFmaintext">brio.</h1>
   <nav class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="download.html">Download</a>
+    <a href="https://nicolasbastoss.github.io/brio/">Home</a>
+    <a href="https://nicolasbastoss.github.io/brio/download.html">Download</a>
     <a href="#">Pricing</a>
     <a href="#">Contact</a>
   </nav>
