--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       font-size: 3rem; 
       font-weight: 600; 
       margin-bottom: 10px; 
-      color: black;
+      color: white;
     }
 
     .descripition { 
@@ -104,7 +104,7 @@
       font-size: 1rem; 
       font-weight: 600; 
       margin-bottom: 20px; 
-      color: black;
+      color: white;
     }
 
     .buttone { 
@@ -374,7 +374,7 @@
     <div class="descripition">Let the imagination flow.</div>
     <button class="buttone" id="getStartedBtn">
       <span class="desktop">Get started ↗</span>
-      <span class="mobile">Test Command Web ↗</span>
+      <span class="mobile">Test Brio.  Web ↗</span>
     </button>
   </div>
 </div>
